[gd_scene load_steps=5 format=2]

[ext_resource path="res://picture/cell.png" type="Texture" id=1]
[ext_resource path="res://script/main.gd" type="Script" id=2]
[ext_resource path="res://font/font.tres" type="Theme" id=3]

[sub_resource type="TileSet" id=1]
0/name = "cell.png 0"
0/texture = ExtResource( 1 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 32, 32 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "cell.png 1"
1/texture = ExtResource( 1 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 96, 0, 32, 32 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "cell.png 2"
2/texture = ExtResource( 1 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 96, 32, 32 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape_one_way = false
2/shape_one_way_margin = 0.0
2/shapes = [  ]
2/z_index = 0
3/name = "cell.png 3"
3/texture = ExtResource( 1 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 96, 96, 32, 32 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0

[node name="Main" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [ 1600.0, 0.0, 500.0, 2083.0 ],
"_edit_vertical_guides_": [ 2400.0, 0.0, 500.0, 1700.0, 2754.0 ]
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 2400.0
margin_bottom = 1600.0
theme = ExtResource( 3 )
color = Color( 1, 1, 1, 0.392157 )

[node name="Label" type="Label" parent="ColorRect"]
margin_left = 735.0
margin_top = 264.0
margin_right = 1487.0
margin_bottom = 345.0
text = "Autocell-rival(demo)"

[node name="level1" type="Button" parent="ColorRect"]
margin_left = 504.0
margin_top = 504.0
margin_right = 727.0
margin_bottom = 716.0
text = "1"

[node name="level2" type="Button" parent="ColorRect"]
margin_left = 1480.0
margin_top = 504.0
margin_right = 1703.0
margin_bottom = 716.0
text = "2"

[node name="level3" type="Button" parent="ColorRect"]
modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
margin_left = 504.0
margin_top = 896.0
margin_right = 727.0
margin_bottom = 1108.0
text = "ðŸ”’"

[node name="level4" type="Button" parent="ColorRect"]
modulate = Color( 0.345098, 0.345098, 0.345098, 1 )
margin_left = 1480.0
margin_top = 888.0
margin_right = 1703.0
margin_bottom = 1100.0
text = "ðŸ”’"

[node name="printf" type="Label" parent="ColorRect"]
margin_left = 952.0
margin_top = 394.0
margin_right = 1240.0
margin_bottom = 475.0
custom_colors/font_color = Color( 0.396078, 0.117647, 0.117647, 1 )
text = "you lose"

[node name="Tween" type="Tween" parent="."]

[node name="Lim_line" type="Line2D" parent="."]
width = 2.0
default_color = Color( 0, 0.8, 0.254902, 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource( 1 )
cell_size = Vector2( 34, 34 )
format = 1
tile_data = PoolIntArray( 131116, 1, 0, 131118, 1, 0, 196652, 1, 0, 196656, 1, 0, 262178, 1, 0, 262179, 1, 0, 262192, 1, 0, 262200, 1, 0, 327714, 1, 0, 327715, 1, 0, 327724, 1, 0, 327729, 1, 0, 327734, 1, 0, 327735, 1, 0, 327736, 1, 0, 327737, 1, 0, 393264, 1, 0, 393269, 1, 0, 393271, 1, 0, 393273, 1, 0, 393274, 1, 0, 393284, 1, 0, 393285, 1, 0, 458796, 1, 0, 458800, 1, 0, 458804, 1, 0, 458807, 1, 0, 458809, 1, 0, 458810, 1, 0, 458811, 1, 0, 458820, 1, 0, 458821, 1, 0, 524332, 1, 0, 524334, 1, 0, 524341, 1, 0, 524343, 1, 0, 524345, 1, 0, 524346, 1, 0, 589878, 1, 0, 589879, 1, 0, 589880, 1, 0, 589881, 1, 0, 655416, 1, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1310724, 0, 0, 1310725, 0, 0, 1310726, 0, 0, 1310727, 0, 0, 1310728, 0, 0, 1310729, 0, 0, 1310731, 0, 0, 1310732, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1441796, 0, 0, 1441797, 0, 0, 1441803, 0, 0, 1441804, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1572868, 0, 0, 1572869, 0, 0, 1572875, 0, 0, 1572876, 0, 0, 1638404, 0, 0, 1638405, 0, 0, 1703940, 0, 0, 1703941, 0, 0, 1703943, 0, 0, 1703944, 0, 0, 1703945, 0, 0, 1703946, 0, 0, 1703947, 0, 0, 1703948, 0, 0, 1769476, 0, 0, 1769477, 0, 0, 1769479, 0, 0, 1769480, 0, 0, 1769481, 0, 0, 1769482, 0, 0, 1769483, 0, 0, 1769484, 0, 0, 2293778, 0, 0, 2293779, 0, 0, 2359313, 0, 0, 2359315, 0, 0, 2359326, 0, 0, 2359351, 1, 0, 2424849, 0, 0, 2424863, 0, 0, 2424886, 1, 0, 2490384, 0, 0, 2490385, 0, 0, 2490395, 0, 0, 2490399, 0, 0, 2490422, 1, 0, 2490426, 1, 0, 2555932, 0, 0, 2555933, 0, 0, 2555934, 0, 0, 2555935, 0, 0, 2555958, 1, 0, 2555959, 1, 0, 2555960, 1, 0, 2555961, 1, 0 )

[node name="AddCell" type="Button" parent="."]
margin_left = 134.0
margin_top = 646.0
margin_right = 442.0
margin_bottom = 952.0
flat = true

[connection signal="button_up" from="ColorRect/level1" to="." method="_on_level1_button_up"]
[connection signal="button_up" from="ColorRect/level2" to="." method="_on_level2_button_up"]
[connection signal="button_up" from="AddCell" to="." method="_on_AddCell_button_up"]
